--- a/Stock Up/Front Area Stock Up/front_area_stock.html
+++ b/Stock Up/Front Area Stock Up/front_area_stock.html
@@ -25,8 +25,8 @@
 <body>
     <div class="container">
         <h1>Stock up Calculator</h1>
-        <p>If the stock is full, move on to the next item. No need to input any number </p>
-        <p>If the Max Stock is 1, and you need to fill up, then press - </p>
+        <p>If the stock is full, move on to the next item </p>
+        <p>If you need to fill up the item where Max Stock is 1, press - </p>
         
         <!-- Counter Section -->
         <div class="section">
@@ -463,7 +463,7 @@
                     <td>Cafe Hot Cup L</td>
                     <td class="stock-control">
                         <button onclick="decreaseStock('cafeHotCupL')">-</button> <!-- Decrease button -->
-                        <span id="cafeHotCupLStock"></span> <!-- Display current stock -->
+                        <span id="cafeHotCupLStock">0</span> <!-- Display current stock -->
                         <button onclick="increaseStock('cafeHotCupL')">+</button> <!-- Increase button -->
                     </td>
                     <td>8</td>
@@ -474,7 +474,7 @@
                     <td>Cafe Hot Cup M</td>
                     <td class="stock-control">
                         <button onclick="decreaseStock('cafeHotCupM')">-</button> <!-- Decrease button -->
-                        <span id="cafeHotCupMStock"></span> <!-- Display current stock -->
+                        <span id="cafeHotCupMStock">0</span> <!-- Display current stock -->
                         <button onclick="increaseStock('cafeHotCupM')">+</button> <!-- Increase button -->
                     </td>
                     <td>6</td>
@@ -485,7 +485,7 @@
                     <td>Cafe Hot Cup S</td>
                     <td class="stock-control">
                         <button onclick="decreaseStock('cafeHotCupS')">-</button> <!-- Decrease button -->
-                        <span id="cafeHotCupSStock"></span> <!-- Display current stock -->
+                        <span id="cafeHotCupSStock">0</span> <!-- Display current stock -->
                         <button onclick="increaseStock('cafeHotCupS')">+</button> <!-- Increase button -->
                     </td>
                     <td>6</td>
@@ -496,7 +496,7 @@
                     <td>Cafe Hot Lid L</td>
                     <td class="stock-control">
                         <button onclick="decreaseStock('cafeHotLidL')">-</button> <!-- Decrease button -->
-                        <span id="cafeHotLidLStock"></span> <!-- Display current stock -->
+                        <span id="cafeHotLidLStock">0</span> <!-- Display current stock -->
                         <button onclick="increaseStock('cafeHotLidL')">+</button> <!-- Increase button -->
                     </td>
                     <td>14</td>
@@ -507,7 +507,7 @@
                     <td>Cafe Hot Lid S</td>
                     <td class="stock-control">
                         <button onclick="decreaseStock('cafeHotLidS')">-</button> <!-- Decrease button -->
-                        <span id="cafeHotLidSStock"></span> <!-- Display current stock -->
+                        <span id="cafeHotLidSStock">0</span> <!-- Display current stock -->
                         <button onclick="increaseStock('cafeHotLidS')">+</button> <!-- Increase button -->
                     </td>
                     <td>6</td>
